k8s/overlays/homelab/exclude-observability.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
$patch: delete
